fixed layout issues

--- a/style.css
+++ b/style.css
@@ -15,8 +15,8 @@ p {
 }
 
 table {
-    width: 800px;
-    height: 300px;
+    width: 600px;
+    height: 200px;
     margin: auto;
 }
 
